--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 </head>
 <body>
-	<a href="Game Design/Pong/pong.html">dog</a>
+	<a href="Game Design/Pong/pong.html">Click me!!</a>
+<a href="Website/webpage2 for shell.html">No! Click me!</a>
 </body>
 </html>
